IN=48959, IZ=52167 j2ee platform merge from dev_j2ee-platform