@@ -12,12 +12,11 @@
  */
 package org.netbeans.modules.j2ee.ejbjarproject.classpath;
 
+import java.beans.PropertyChangeEvent;
 import org.netbeans.spi.java.classpath.ClassPathImplementation;
 import org.netbeans.spi.java.classpath.support.ClassPathSupport;
 import org.netbeans.spi.project.support.ant.AntProjectHelper;
-import org.netbeans.spi.project.support.ant.AntProjectListener;
 import org.netbeans.spi.project.support.ant.AntProjectEvent;
-import org.openide.ErrorManager;
 import org.openide.filesystems.FileUtil;
 
 import java.util.List;
@@ -28,21 +27,35 @@ import java.beans.PropertyChangeSupport;
 import java.net.MalformedURLException;
 import java.io.File;
 import java.net.URL;
+import org.netbeans.spi.project.support.ant.PropertyEvaluator;
 
 import org.netbeans.spi.project.support.ant.PropertyUtils;
+import org.openide.util.WeakListeners;
 
-final class ProjectClassPathImplementation implements ClassPathImplementation, AntProjectListener {
+final class ProjectClassPathImplementation implements ClassPathImplementation, PropertyChangeListener {
 
     private PropertyChangeSupport support = new PropertyChangeSupport(this);
     private AntProjectHelper helper;
-    private String propertyName;
+    private String expression;
+    private String resolved;
     private List resources;
+    private boolean isProperty;
+    private final PropertyEvaluator evaluator;
 
-    public ProjectClassPathImplementation (AntProjectHelper helper, String propertyName) {
-        assert helper != null && propertyName != null;
+    public ProjectClassPathImplementation (AntProjectHelper helper, String expression, PropertyEvaluator evaluator, boolean isProperty) {
+        assert helper != null && expression != null;
         this.helper = helper;
-        this.propertyName = propertyName;
-        this.helper.addAntProjectListener (this);
+        this.evaluator = evaluator;
+        this.expression = expression;
+        this.isProperty = isProperty;
+        evaluator.addPropertyChangeListener(WeakListeners.propertyChange(this, evaluator));
+        if (!isProperty) {
+            resolved = evaluator.evaluate (expression);
+        }
+    }
+    
+    public ProjectClassPathImplementation (AntProjectHelper helper, String property, PropertyEvaluator evaluator) {
+        this(helper, property, evaluator, true);
     }
 
     public synchronized List /*<PathResourceImplementation>*/ getResources() {
@@ -60,12 +73,20 @@ final class ProjectClassPathImplementation implements ClassPathImplementation, A
         support.removePropertyChangeListener (listener);
     }
 
-
-    public void configurationXmlChanged(AntProjectEvent ev) {
-        //Not interesting
-    }
-
-    public void propertiesChanged(AntProjectEvent ev) {
+    public void propertyChange(PropertyChangeEvent evt) {        
+        if (isProperty && !evt.getPropertyName().equals(expression)) {
+            // Not interesting to us.
+            return;
+        }
+        if (!isProperty) {
+            String eval = evaluator.evaluate (expression);
+            if (eval == resolved) {
+                return;
+            } else {
+                resolved = eval;
+            }
+        }
+        
         List newRoots = getPath ();
         boolean fire = false;
         synchronized (this) {
@@ -81,34 +102,28 @@ final class ProjectClassPathImplementation implements ClassPathImplementation, A
 
     private List getPath() {
         List result = new ArrayList ();
-        String prop = helper.getStandardPropertyEvaluator ().getProperty (propertyName);
+        String prop = isProperty ? evaluator.getProperty(expression) : resolved;
         if (prop != null) {
             String[] pieces = PropertyUtils.tokenizePath(prop);
             for (int i = 0; i < pieces.length; i++) {
                 File f = helper.resolveFile(pieces[i]);
                 try {
-                    URL entry;
-                    // if file does not exist (e.g. build/classes folder
-                    // was not created yet) then corresponding File will
-                    // not be ended with slash. Fix that.
-                    if (f.getPath().toLowerCase().endsWith(".jar")) {
-                        entry = FileUtil.getArchiveRoot(f.toURI().toURL());
-                    } else {
-                        entry = f.toURI().toURL();
-                        if (!f.exists()) {
-                            assert !entry.toExternalForm().endsWith("/") : f;
-                            entry = new URL(entry.toExternalForm() + "/");
-                        }
+                    URL entry = f.toURI().toURL();
+                    if (FileUtil.isArchiveFile(entry)) {
+                        entry = FileUtil.getArchiveRoot(entry);
+                    } else if (!f.exists()) {
+                        // if file does not exist (e.g. build/classes folder
+                        // was not created yet) then corresponding File will
+                        // not be ended with slash. Fix that.
+                        assert !entry.toExternalForm().endsWith("/") : f; // NOI18N
+                        entry = new URL(entry.toExternalForm() + "/"); // NOI18N
                     }
-                    if (entry != null) {
-                        result.add(ClassPathSupport.createResource(entry));
-                    }
+                    result.add(ClassPathSupport.createResource(entry));
                 } catch (MalformedURLException mue) {
-                    ErrorManager.getDefault().notify(mue);
+                    assert false : mue;
                 }
             }
         }
         return Collections.unmodifiableList(result);
     }
-
 }
